# c-exercise

./: CMakeLists.txt  README.md
ch1/: ex1-10.c  ex1-11.c  ex1-12.c  ex1-13.c  ex1-14.c  ex1-15.c  ex1-16.c  ex1-17.c  ex1-18.c  ex1-19.c  ex1-2.c  ex1-20.c  ex1-3.c  ex1-4.c  ex1-5.c  ex1-6.c  ex1-7.c  ex1-8.c  ex1-9.c
ch2/: 1.c  10.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
ch3/: 1.c  2.c  3.c  4.c
ch4/exercise_1/: main.c
ch4/exercise_3/: main.c
