cmake_minimum_required(VERSION 3.00)

project(c-exercise C)

# add_executable(ex1-1 ch1/ex1-1.c)
# add_executable(ex1-2 ch1/ex1-2.c)
# add_executable(ex1-3 ch1/ex1-3.c)
# add_executable(ex1-4 ch1/ex1-4.c)
# add_executable(ex1-5 ch1/ex1-5.c)
# add_executable(ex1-6 ch1/ex1-6.c)
# add_executable(ex1-7 ch1/ex1-7.c)
# add_executable(ex1-8 ch1/ex1-8.c)
# add_executable(ex1-9 ch1/ex1-9.c)
# add_executable(ex1-10 ch1/ex1-10.c)
# add_executable(ex1-11 ch1/ex1-11.c)
# add_executable(ex1-12 ch1/ex1-12.c)
# add_executable(ex1-13 ch1/ex1-13.c)
# add_executable(ex1-14 ch1/ex1-14.c)
# add_executable(ex1-15 ch1/ex1-15.c)
# add_executable(ex1-16 ch1/ex1-16.c)
# add_executable(ex1-17 ch1/ex1-17.c)
# add_executable(ex1-18 ch1/ex1-18.c)
# add_executable(ex1-19 ch1/ex1-19.c)
# add_executable(ex1-20 ch1/ex1-20.c)

add_executable(ex2-1 ch2/1.c)
